--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,10 +4,16 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        {% endblock %}
     </head>
     <body>
+    
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+
+        {% block javascripts %}
+            <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+        {% endblock %}
     </body>
 </html>
